<resources>
    <string name="app_name">TemplateProgram</string>

    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id1">ca-app-pub-9145758407938760/5396146193</string>
    <string name="banner_ad_unit_id2">ca-app-pub-6564422200233347/9589103314</string>
    <string name="impossible_game">Impossible Game</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_attribution">Ad</string>

    <string name="retry_button_text">Retry</string>
    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
    <string name="default_coin_text">Coins: 0</string>

    <string name="facebook_app_id">424244591372282</string>
    <string name="fb_login_protocol_scheme">fb424244591372282</string>


    <string name="main_primary_title">Primary Channel</string>
    <string name="main_primary_send1">Send 1</string>
    <string name="main_primary_send2">Send 2</string>
    <string name="main_primary_config">Go to primary settings</string>
    <string name="main_secondary_title">Secondary Channel</string>
    <string name="main_secondary_send1">Send 1</string>
    <string name="main_secondary_send2">Send 2</string>
    <string name="main_secondary_config">Go to secondary settings</string>
    <string name="btn_config">Go to Settings</string>
    <string name="primary1_body">The content</string>
    <string name="primary2_body">Second Notification for Primary Channel</string>
    <string name="secondary1_body">Notification body text.</string>
    <string name="secondary2_body">Second Notification for Secondary Channel</string>


    <integer-array name="test_arr">
        <item>@drawable/beauty1</item>
        <item>@drawable/beauty2</item>
        <item>@drawable/beauty3</item>
        <item>@drawable/beauty4</item>
        <item>@drawable/beauty5</item>
        <item>@drawable/beauty6</item>
        <item>@drawable/beauty7</item>
        <item>@drawable/beauty8</item>
        <item>@drawable/beauty9</item>
        <item>@drawable/beauty10</item>
        <item>@drawable/beauty11</item>
        <item>@drawable/beauty12</item>
        <item>@drawable/beauty13</item>
    </integer-array>


</resources>
